@@ -1008,5 +1008,60 @@ with file(\"foo\" + zeit + \".ending\", 'w') as datei:
       
       ))
 
+(ert-deftest py-ert-match-paren-test-1 ()
+    (py-test-with-temp-buffer
+	py-def-and-class-test-string
+      (skip-chars-backward "^)")
+      (forward-char -1) 
+      (py-match-paren)
+      (should (eq (char-after) ?\())
+      (py-match-paren)
+      (should (eq (char-after) ?\)))
+      (back-to-indentation)
+      (py-match-paren)
+      (should (eq (char-before) ?\)))
+      (py-match-paren)
+      (should (eq (char-after) ?i))
+      (py-match-paren)
+      (should (eq (char-before) ?\)))
+      (search-backward "(treffer)")
+      (skip-chars-backward "^\"") 
+      (forward-char -1)
+      (py-match-paren)
+      (should (eq (char-after) ?#))
+      (py-match-paren)
+      (should (eq (char-before) ?\)))
+      (should (eolp) )
+      (skip-chars-forward "^\]")
+      (py-match-paren)
+      (should (eq (char-after) ?\[))
+      (py-match-paren) 
+      (should (eq (char-after) ?\]))
+      (skip-chars-backward "^:")
+      (py-match-paren)
+      (should (eq (char-after) ?e))
+      (py-match-paren)
+      (should (eq (char-before) ?r))
+      (search-backward "pylauf")
+      (py-match-paren)
+      (should (eq (char-after) ?\"))
+      (py-match-paren)
+      (should (eq (char-after) ?\"))
+      ))
+
+;; (ert-deftest py-ert-match-paren-test-2 ()
+;;     (py-test-with-temp-buffer
+;; 	py-def-and-class-test-string
+;;       (forward-line -3)
+;;       (indent-to 12)
+;;       (py-match-paren)
+;;       (should (eq (char-after) ?e))
+;;       (forward-line 3) 
+;;       (fixup-whitespace)
+;;       (indent-to 8)
+;;       (py-match-paren)
+;;       (should (eq (char-after) ?d))
+;;       ))
+
 (provide 'py-ert-tests-1)
 ;;; py-ert-tests-1.el ends here
